--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -91,6 +91,7 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/login_et_background"
                     android:hint="@string/enter_your_password"
+                    android:inputType="textPassword"
                     android:imeOptions="actionNext"
                     android:paddingStart="12dp"
                     android:paddingTop="14dp"
@@ -124,6 +125,7 @@
                     android:hint="@string/enter_your_password"
                     android:imeOptions="actionDone"
                     android:paddingStart="12dp"
+                    android:inputType="textPassword"
                     android:paddingTop="14dp"
                     android:paddingEnd="12dp"
                     android:paddingBottom="14dp"
