--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -140,7 +140,8 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="48dp"
                 android:layout_marginEnd="16dp"
-                android:background="@drawable/bg_button_onboarding"
+                android:enabled="false"
+                android:background="@drawable/login_button_bg"
                 android:text="@string/next" />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
