--- a/app/src/main/res/layout/fragment_challenge_instruments.xml
+++ b/app/src/main/res/layout/fragment_challenge_instruments.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -24,14 +23,13 @@
         android:layout_marginTop="58dp"
         android:layout_marginEnd="16dp"
         android:textColor="@color/blackText"
-        android:textSize="24sp"
         android:textStyle="bold"
         android:ellipsize="end"
         android:maxLines="1"
+        android:text="@string/daily_challenge"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/back"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Челлендж" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/instruments"
