--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -62,6 +62,7 @@
                 android:fontFamily="@font/montserrat_regular"
                 android:hint="@string/enter_your_email"
                 android:imeOptions="actionNext"
+                android:inputType="textEmailAddress"
                 android:paddingStart="12dp"
                 android:paddingTop="14dp"
                 android:paddingEnd="12dp"
