--- a/app/src/main/res/layout/fragment_login_with_email.xml
+++ b/app/src/main/res/layout/fragment_login_with_email.xml
@@ -63,6 +63,7 @@
                 android:background="@drawable/login_et_background"
                 android:fontFamily="@font/montserrat_regular"
                 android:hint="@string/enter_your_email"
+                android:inputType="textEmailAddress"
                 android:imeOptions="actionNext"
                 android:paddingStart="12dp"
                 android:paddingTop="14dp"
@@ -134,5 +135,18 @@
                 android:text="@string/do_not_have_acc_do_registration"
                 android:textColor="@color/white" />
         </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <ProgressBar
+            android:id="@+id/progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:indeterminate="true"
+            android:indeterminateTintMode="src_atop"
+            android:indeterminateTint="@color/blueColor"
+            android:visibility="gone"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
