--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -158,6 +158,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:visibility="gone"
             android:layout_marginTop="32dp"
             android:fontFamily="@font/montserrat_regular"
             android:text="@string/txt_notify_meditation"
@@ -172,6 +173,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:checked="false"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@id/tvNotifyMeditation"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/tvNotifyMeditation"
