--- a/app/src/main/res/layout/item_audio_track.xml
+++ b/app/src/main/res/layout/item_audio_track.xml
@@ -27,6 +27,7 @@
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/montserrat_regular"
         android:lines="1"
+        android:ellipsize="end"
         android:textColor="@color/blackText"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
